--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,7 +1,6 @@
 .carousel {
   border-style: solid;
   border-color: aliceblue;
-
   display: flex;
   flex-direction: row;
   margin-bottom: 50px;
@@ -9,7 +8,7 @@
   overflow-x: auto;
   text-align: center;
   height: 20rem;
-  width: 90%;
+  width: 90vw;
 }
 
 .cardOfProject {
@@ -19,17 +18,18 @@
   display: flex;
   flex-direction: column;
   margin: 20px;
-  width: 550px;
+  border-radius: 10px;
 }
 
 .projImage{
-  width: 20px;
+  width: 25vw;
 }
 
-.buttonLink{
+.buttonLink a{
   background-color: grey;
+  justify-self: center;
   width: 70px;
   padding: 5px;
   margin: 10px;
-  border-radius: 15px;
+  border-radius: 10px;
 }
