--- a/src/styles/Apresentation.css
+++ b/src/styles/Apresentation.css
@@ -107,3 +107,13 @@
   background: #C4C4C4;
   border-radius: 10px;
 }
+
+@media (max-width: 765px) {
+  .apresentation {
+    display: flex;
+    padding: 5rem 0;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+}
