--- a/src/styles/MainPage.css
+++ b/src/styles/MainPage.css
@@ -1,5 +1,5 @@
 body {
-  background-color: black;
+  background-color: rgb(0, 0, 0);
 }
 
 /* https://www.w3schools.com/howto/howto_css_custom_scrollbar.asp */
