--- a/src/styles/Stacks.css
+++ b/src/styles/Stacks.css
@@ -14,14 +14,13 @@
 }
 
 section {
-  width: 60%;
-  margin-left: 20%;
-  margin-top: 20px;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-top: 30px;
   margin-bottom: 50px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  height: 240px;
 }
 
 .icon-box {
